UI: added login register, Server: views and frontend controller added

--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,7 @@
             "email": "mdkelley02@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "firebase/php-jwt": "^6.0"
+    }
 }
